<resources>
    <string name="app_name">Xpense</string>
    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="addTransactionNameHint">Note</string>
    <string name="category">Category</string>
    <string name="valueNull">0</string>
    <string name="Rupee">Rs.</string>
    <string name="pickDate">Pick Date</string>
    <string name="title_activity_categories">Categories</string>
    <string name="action_settings">Settings</string>
    <string name="balance">0</string>
    <string name="saving">Saving</string>
    <string name="savingAmount">0</string>
    <string name="expenditure">Expenditure</string>
    <string name="expenditureAmount">0</string>
    <string name="title_activity_category">Category</string>
    <string name="newCategoryNameHint">New Category Name</string>
    <string name="title_activity_add_category">Add Category</string>

</resources>
