<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dawnimpulse.xpense.OverviewActivity"
    tools:showIn="@layout/activity_overview">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/rupeeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="8dp"
                    android:text="@string/Rupee"
                    android:textSize="32sp" />

                <TextView
                    android:id="@+id/balance"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/rupeeText"
                    android:paddingLeft="8dp"
                    android:text="@string/balance"
                    android:textSize="32sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/savingAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/savingAmount"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/savingText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_toLeftOf="@id/savingAmount"
                            android:layout_toStartOf="@id/savingAmount"
                            android:paddingRight="8dp"
                            android:text="@string/saving"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true">

                        <TextView
                            android:id="@+id/expenditureAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginBottom="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/expenditureAmount"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/expenditureText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_toLeftOf="@id/expenditureAmount"
                            android:paddingRight="8dp"
                            android:text="@string/expenditure"
                            android:textSize="16sp" />


                    </RelativeLayout>

                </RelativeLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Card"
            android:layout_marginTop="16dp">

            <ListView
                android:id="@+id/TransactionList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:divider="@null"
                android:dividerHeight="0dp">

            </ListView>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <ListView
        android:id="@+id/drawerList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:background="#ffeeeeee" />
</android.support.v4.widget.DrawerLayout>
